--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "townsquare",
-  "version": "1.1.8",
+  "version": "1.2.0",
   "description": "Doomtown:Reloaded Card Game Server",
   "main": "index.js",
+  "engines": {
+    "node": "^14.0.0"
+  },
   "scripts": {
     "test": "npm run jasmine",
     "coverage": "nyc npm run test",
