--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "townsquare-json-data"]
 	path = townsquare-json-data
-	url = git@github.com:Ironcache/townsquare-json-data.git
+	url = https://github.com/Ironcache/townsquare-json-data.git
